force-app/main/default/objects/Menu_Option__c/Menu_Option__c.object-meta.xml
<CustomObject>
    <label>Menu Option</label>
    <nameField>
        <label>Option</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>