force-app/main/default/objects/Menu_Option__c/fields/Call_Experience__c.field-meta.xml
<CustomField>
    <fullName>Call_Experience__c</fullName>
    <description>Parent Call experience for this menu option</description>
    <inlineHelpText>Parent Call experience for this menu option</inlineHelpText>
    <label>Call Experience</label>
    <referenceTo>Call_Experience__c</referenceTo>
    <relationshipLabel>Menu Options</relationshipLabel>
    <relationshipName>Menu_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>