force-app/main/default/objects/Menu_Option__c/fields/Contact_Flow_ARN__c.field-meta.xml
<CustomField>
    <fullName>Contact_Flow_ARN__c</fullName>
    <description>In case type of Menu Option is Amazon Connect Flow, this field stores the ARN for the contact flow.</description>
    <inlineHelpText>Contact flow ARN to which the current contact will be transferred</inlineHelpText>
    <label>Contact Flow ARN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>