force-app/main/default/objects/Menu_Option__c/fields/Parent_Menu__c.field-meta.xml
<CustomField>
    <fullName>Parent_Menu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent menu option record.</description>
    <inlineHelpText>Parent Menu</inlineHelpText>
    <label>Parent Menu</label>
    <referenceTo>Menu_Option__c</referenceTo>
    <relationshipLabel>Sub-menu</relationshipLabel>
    <relationshipName>Sub_Menu</relationshipName>
    <type>Lookup</type>
</CustomField>