force-app/main/default/objects/Menu_Option__c/fields/Self_service_Message__c.field-meta.xml
<CustomField>
    <fullName>Self_service_Message__c</fullName>
    <description>In case menu option type is &apos;Self-service Message&apos;, then this field should store the text for the message.</description>
    <inlineHelpText>Self-service message text</inlineHelpText>
    <label>Self-service Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>