force-app/main/default/objects/Menu_Option__c/fields/Sub_menu_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Sub_menu_Prompt__c</fullName>
    <description>If the type is &apos;Sub-menu&apos;, then provide the prompt for next menu selection.</description>
    <inlineHelpText>Menu prompt for next menu selection</inlineHelpText>
    <label>Sub-menu Prompt</label>
    <type>TextArea</type>
</CustomField>