force-app/main/default/objects/Menu_Option__c/fields/Transfer_To__c.field-meta.xml
<CustomField>
    <fullName>Transfer_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the menu option type is &apos;Call Transfer&apos;, then this field must store the Call Transfer record ID where the call will be transferred.</description>
    <inlineHelpText>Call Transfer record where you want to transfer the call</inlineHelpText>
    <label>Transfer To</label>
    <referenceTo>Transfer__c</referenceTo>
    <relationshipLabel>Menu Options</relationshipLabel>
    <relationshipName>Menu_Options</relationshipName>
    <type>Lookup</type>
</CustomField>