force-app/main/default/objects/Menu_Option__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Stores the type of the menu option</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amazon Contact Flow</fullName>
            </value>
            <value>
                <fullName>Call Transfer</fullName>
            </value>
            <value>
                <fullName>Self-Service Message</fullName>
            </value>
            <value>
                <fullName>Sub-menu</fullName>
            </value>
            <value>
                <fullName>Menu Loop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>