force-app/main/default/objects/Menu_Option__c/fields/User_Choice__c.field-meta.xml
<CustomField>
    <fullName>User_Choice__c</fullName>
    <description>This field differentiates between user inputs. The values can be 0-9, * and #. It only address the DTMF input.</description>
    <inlineHelpText>DTMF input received from user (0-9,*,#)</inlineHelpText>
    <label>User Choice</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>*</fullName>
            </value>
            <value>
                <fullName>#</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>