force-app/main/default/objects/Menu_Option__c/validationRules/Total_options_less_than_12.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_options_less_than_12</fullName>
    <active>false</active>
    <errorConditionFormula>Call_Experience__r.Total_Menu_Options__c &gt; 12</errorConditionFormula>
    <errorDisplayField>Call_Experience__c</errorDisplayField>
    <errorMessage>Cannot create more than 12 menu options for a call experience.</errorMessage>
</ValidationRule>