force-app/main/default/objects/Menu_Option__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Call_Experience__c</columns>
    <columns>Parent_Menu__c</columns>
    <columns>User_Choice__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>